--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     }
 
 
-    /* .navbar.collapsed [href="https://wa.me/85226466488"] i,
+    /* .navbar.collapsed [href="https://wa.me/85264882646"] i,
     .navbar.collapsed [href="tel:+85254068853"] i,
     .navbar.collapsed [href="https://www.facebook.com/shibahome.hk"] i {
       margin-right: 0;
@@ -389,7 +389,7 @@
 
 
       /* .navbar [href="#collection-section"] span,
-      .navbar [href="https://wa.me/85226466488"] span,
+      .navbar [href="https://wa.me/85264882646"] span,
       .navbar [href="tel:+85254068853"] span,
       .navbar [href="https://www.facebook.com/shibahome.hk"] span {
         display: none;
@@ -501,7 +501,7 @@
           <li class="nav-item"><a class="nav-link" href="#collection-section"><i class="bi bi-bag"></i>
               <span>產品</span></a></li>
           <li class="nav-item"><a class="nav-link" id="nav-whatsapp"
-              href="https://wa.me/85226466488?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E6%9F%A5%E8%A9%A2%E9%BB%91%E6%9F%B4%E5%B1%8B%E7%94%A2%E5%93%81"
+              href="https://wa.me/85264882646"
               target="_blank"><i class="bi bi-whatsapp"></i><span> 2646 6488</span></a></li>
           <li class="nav-item"><a class="nav-link" href="tel:+85254068853" target="_blank"><i
                 class="bi bi-telephone"></i> <span>5406 8853</span></a>
@@ -648,7 +648,7 @@
                   </div>
                   <div class="col-6">
                     <p class="card-text text-end"><a
-                        href="https://wa.me/85226466488?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E5%B0%BF%E7%89%87%E3%80%82%E5%A4%A7%E5%B0%8F%3A%20%20%20%E6%95%B8%E9%87%8F%3A"
+                        href="https://wa.me/85264882646?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E5%B0%BF%E7%89%87%E3%80%82%E5%A4%A7%E5%B0%8F%3A%20%20%20%E6%95%B8%E9%87%8F%3A"
                         class="btn"><i class="bi bi-whatsapp"></i>
                         Whatsapp
                         落單</a></p>
@@ -688,7 +688,7 @@
                   </div>
                   <div class="col-6">
                     <p class="card-text text-end">
-                      <a href="https://wa.me/85226466488?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E8%B2%93%E7%A0%82%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E5%8C%85"
+                      <a href="https://wa.me/85264882646?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E8%B2%93%E7%A0%82%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E5%8C%85"
                         class="btn"><i class="bi bi-whatsapp"></i>
                         Whatsapp
                         落單</a>
@@ -737,7 +737,7 @@
                     </div>
                     <div class="col-6">
                       <p class="card-text text-end">
-                        <a href="https://wa.me/85226466488?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E5%9C%B0%E6%9D%BF%E6%B8%85%E6%BD%94%E5%8A%91%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E6%94%AF"
+                        <a href="https://wa.me/85264882646?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E5%9C%B0%E6%9D%BF%E6%B8%85%E6%BD%94%E5%8A%91%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E6%94%AF"
                           class="btn"><i class="bi bi-whatsapp"></i>
                           Whatsapp
                           落單</a>
@@ -778,7 +778,7 @@
                   </div>
                   <div class="col-6">
                     <p class="card-text text-end">
-                      <a href="https://wa.me/85226466488?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E9%98%B2%E6%95%8F%E6%B2%90%E6%B5%B4%E9%9C%B2%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E5%8C%85"
+                      <a href="https://wa.me/85264882646?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E9%98%B2%E6%95%8F%E6%B2%90%E6%B5%B4%E9%9C%B2%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E5%8C%85"
                         class=" btn whatsapp-btn"><i class="bi bi-whatsapp"></i>
                         Whatsapp
                         落單</a>
@@ -820,7 +820,7 @@
                   </div>
                   <div class="col-6">
                     <p class="card-text text-end"><a
-                        href="https://wa.me/85226466488?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E6%AE%BA%E8%8F%8C%E6%B6%88%E6%AF%92%E9%99%A4%E5%91%B3%E5%99%B4%E9%9C%A7%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E6%94%AF"
+                        href="https://wa.me/85264882646?text=%E4%BD%A0%E5%A5%BD%EF%BC%81%E6%83%B3%E8%B3%BC%E8%B2%B7%E6%AE%BA%E8%8F%8C%E6%B6%88%E6%AF%92%E9%99%A4%E5%91%B3%E5%99%B4%E9%9C%A7%E3%80%82%E6%95%B8%E9%87%8F%3A%20%20%20%E6%94%AF"
                         class="btn"><i class="bi bi-whatsapp"></i>
                         Whatsapp
                         落單</a></p>
